# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.36 2005/01/15 08:26:23 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  15 Jan 2004; Andrew Gaffney <agaffney@gentoo.org>
  USE flag editor in MakeDotConf.py. Fix double spacing issue for USE flags.

  14 Jan 2005; John Laliberte <allanonl@bu.edu>
  Timezone.py - fixed bug where after selecting a timezone, it would jump
  to the parent of the selection.
  Networking.py - fixed bug where some fields would be available if device
  was selected and was dhcp.  also integrated into backend ( one way only
  so far, only will save, not load settings yet ).  Added error box to
  ask the user if they want to replace settings or cancel if the device
  is already listed.
  
  14 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added description to the top of NetworkMounts and changed the spacing
  of the description on Partitioning. In NetworkMounts, activate() now
  disables all buttons except 'New'. NetworkMounts now does field
  validation. Welcome.py code cleanups. Created Template.py based on
  Welcome.py. Rewrote Stage.py from scratch. Rewrote PortageTree.py.
  Added set_size_request() calls in PortageTree and Stage for alignment.
  Rewrote Kernel.py. Rewrote Daemons.py. Added sysklogd to loggers section
  of Daemons.py. Rewrote Bootloader.py

  13 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - Complete rework of the screen using (as a
  template ) agaffney's network mounts screen. This screen still
  needs to be "integrated" into the backend, but will be completed
  within the next few days. At some point the dropdown needs to be
  changed to an entry combobox.

  09 Jan 2005; John Laliberte <allanonl@bu.edu>
  Timezone.py - Updated so it now is integrated with the backend.
  When you select and item in the tree that is not a node,
  ( you need to press enter or double-click ) it will set your timezone.
